--- a/CyrusDashboard/History_VM-AD3.html
+++ b/CyrusDashboard/History_VM-AD3.html
@@ -22,6 +22,8 @@
 <table>
 <colgroup><col/><col/><col/><col/></colgroup>
 <tr><th>Name</th><th>CreationTime</th><th>LastModified</th><th>Size</th></tr>
+<tr><td>V:\VM_Backup\AD3\ad3D2018-07-22T200123.vbk</td><td>7/22/2018 8:01:51 PM</td><td>7/22/2018 8:10:54 PM</td><td>10.2 GB</td></tr>
+<tr><td>V:\VM_Backup\AD3\ad3D2018-07-01T200128.vbk</td><td>7/1/2018 8:02:03 PM</td><td>7/1/2018 8:11:12 PM</td><td>10.18 GB</td></tr>
 <tr><td>V:\VM_Backup\AD3\ad3D2018-06-24T200125.vbk</td><td>6/24/2018 8:01:59 PM</td><td>6/24/2018 8:10:30 PM</td><td>9.08 GB</td></tr>
 <tr><td>V:\VM_Backup\AD3\ad3D2018-06-10T200116.vbk</td><td>6/10/2018 8:01:50 PM</td><td>6/10/2018 8:09:22 PM</td><td>7.69 GB</td></tr>
 <tr><td>V:\VM_Backup\AD3\ad3D2018-05-20T200107.vbk</td><td>5/20/2018 8:01:35 PM</td><td>5/20/2018 8:10:03 PM</td><td>8.81 GB</td></tr>
