--- a/CyrusDashboard/History_VM-Centurion1.html
+++ b/CyrusDashboard/History_VM-Centurion1.html
@@ -22,6 +22,8 @@
 <table>
 <colgroup><col/><col/><col/><col/></colgroup>
 <tr><th>Name</th><th>CreationTime</th><th>LastModified</th><th>Size</th></tr>
+<tr><td>V:\VM_Backup\Centurion1\Centurion1D2018-07-22T201224.vbk</td><td>7/22/2018 8:12:47 PM</td><td>7/22/2018 8:21:51 PM</td><td>10.5 GB</td></tr>
+<tr><td>V:\VM_Backup\Centurion1\Centurion1D2018-07-01T201226.vbk</td><td>7/1/2018 8:12:49 PM</td><td>7/1/2018 8:21:46 PM</td><td>10.08 GB</td></tr>
 <tr><td>V:\VM_Backup\Centurion1\Centurion1D2018-06-24T201157.vbk</td><td>6/24/2018 8:12:20 PM</td><td>6/24/2018 8:22:19 PM</td><td>11.39 GB</td></tr>
 <tr><td>V:\VM_Backup\Centurion1\Centurion1D2018-06-10T201045.vbk</td><td>6/10/2018 8:11:08 PM</td><td>6/10/2018 8:20:04 PM</td><td>9.84 GB</td></tr>
 <tr><td>V:\VM_Backup\Centurion1\Centurion1D2018-05-20T201128.vbk</td><td>5/20/2018 8:11:51 PM</td><td>5/20/2018 8:20:28 PM</td><td>9.71 GB</td></tr>
