--- a/CyrusDashboard/History_VM-CyrusClient1.html
+++ b/CyrusDashboard/History_VM-CyrusClient1.html
@@ -22,6 +22,8 @@
 <table>
 <colgroup><col/><col/><col/><col/></colgroup>
 <tr><th>Name</th><th>CreationTime</th><th>LastModified</th><th>Size</th></tr>
+<tr><td>V:\VM_Backup\CyrusClient1\CyrusClient1D2018-07-22T202306.vbk</td><td>7/22/2018 8:23:30 PM</td><td>7/22/2018 8:32:50 PM</td><td>10.64 GB</td></tr>
+<tr><td>V:\VM_Backup\CyrusClient1\CyrusClient1D2018-07-01T202257.vbk</td><td>7/1/2018 8:23:20 PM</td><td>7/1/2018 8:32:16 PM</td><td>10.14 GB</td></tr>
 <tr><td>V:\VM_Backup\CyrusClient1\CyrusClient1D2018-06-24T202347.vbk</td><td>6/24/2018 8:24:10 PM</td><td>6/24/2018 8:32:53 PM</td><td>9.91 GB</td></tr>
 </table>
 </div>
