--- a/CyrusDashboard/History_VM-Dokuwiki1.html
+++ b/CyrusDashboard/History_VM-Dokuwiki1.html
@@ -22,6 +22,8 @@
 <table>
 <colgroup><col/><col/><col/><col/></colgroup>
 <tr><th>Name</th><th>CreationTime</th><th>LastModified</th><th>Size</th></tr>
+<tr><td>V:\VM_Backup\Dokuwiki1\Dokuwiki1D2018-07-22T203415.vbk</td><td>7/22/2018 8:34:38 PM</td><td>7/22/2018 8:40:29 PM</td><td>6.29 GB</td></tr>
+<tr><td>V:\VM_Backup\Dokuwiki1\Dokuwiki1D2018-07-01T203333.vbk</td><td>7/1/2018 8:33:56 PM</td><td>7/1/2018 8:39:48 PM</td><td>5.93 GB</td></tr>
 <tr><td>V:\VM_Backup\Dokuwiki1\Dokuwiki1D2018-06-24T203413.vbk</td><td>6/24/2018 8:34:36 PM</td><td>6/24/2018 8:40:38 PM</td><td>6.2 GB</td></tr>
 <tr><td>V:\VM_Backup\Dokuwiki1\Dokuwiki1D2018-06-10T202134.vbk</td><td>6/10/2018 8:21:57 PM</td><td>6/10/2018 8:27:46 PM</td><td>5.71 GB</td></tr>
 <tr><td>V:\VM_Backup\Dokuwiki1\Dokuwiki1D2018-05-20T202151.vbk</td><td>5/20/2018 8:22:14 PM</td><td>5/20/2018 8:27:12 PM</td><td>4.74 GB</td></tr>
