--- a/CyrusDashboard/History_VM-EP-MG1.html
+++ b/CyrusDashboard/History_VM-EP-MG1.html
@@ -22,6 +22,8 @@
 <table>
 <colgroup><col/><col/><col/><col/></colgroup>
 <tr><th>Name</th><th>CreationTime</th><th>LastModified</th><th>Size</th></tr>
+<tr><td>V:\VM_Backup\EP-MG1\EP-MG1D2018-07-22T204144.vbk</td><td>7/22/2018 8:42:07 PM</td><td>7/22/2018 8:49:00 PM</td><td>7.01 GB</td></tr>
+<tr><td>V:\VM_Backup\EP-MG1\EP-MG1D2018-07-01T204103.vbk</td><td>7/1/2018 8:41:27 PM</td><td>7/1/2018 8:48:21 PM</td><td>7.05 GB</td></tr>
 <tr><td>V:\VM_Backup\EP-MG1\EP-MG1D2018-06-24T204200.vbk</td><td>6/24/2018 8:42:22 PM</td><td>6/24/2018 8:50:01 PM</td><td>8.41 GB</td></tr>
 <tr><td>V:\VM_Backup\EP-MG1\EP-MG1D2018-06-10T202909.vbk</td><td>6/10/2018 8:29:31 PM</td><td>6/10/2018 8:37:17 PM</td><td>8.32 GB</td></tr>
 <tr><td>V:\VM_Backup\EP-MG1\EP-MG1D2018-05-20T202827.vbk</td><td>5/20/2018 8:28:50 PM</td><td>5/20/2018 8:35:44 PM</td><td>6.96 GB</td></tr>
