--- a/CyrusDashboard/History_VM-FortiClientEMS1.html
+++ b/CyrusDashboard/History_VM-FortiClientEMS1.html
@@ -22,6 +22,8 @@
 <table>
 <colgroup><col/><col/><col/><col/></colgroup>
 <tr><th>Name</th><th>CreationTime</th><th>LastModified</th><th>Size</th></tr>
+<tr><td>V:\VM_Backup\FortiClientEMS1\FortiClientEMS1D2018-07-22T205011.vbk</td><td>7/22/2018 8:50:34 PM</td><td>7/22/2018 9:02:06 PM</td><td>14.37 GB</td></tr>
+<tr><td>V:\VM_Backup\FortiClientEMS1\FortiClientEMS1D2018-07-01T204926.vbk</td><td>7/1/2018 8:49:49 PM</td><td>7/1/2018 9:01:54 PM</td><td>15.22 GB</td></tr>
 <tr><td>V:\VM_Backup\FortiClientEMS1\FortiClientEMS1D2018-06-24T205114.vbk</td><td>6/24/2018 8:51:37 PM</td><td>6/24/2018 9:03:08 PM</td><td>14.11 GB</td></tr>
 <tr><td>V:\VM_Backup\FortiClientEMS1\FortiClientEMS1D2018-06-10T203833.vbk</td><td>6/10/2018 8:38:56 PM</td><td>6/10/2018 8:50:35 PM</td><td>14.02 GB</td></tr>
 <tr><td>V:\VM_Backup\FortiClientEMS1\FortiClientEMS1D2018-05-20T203659.vbk</td><td>5/20/2018 8:37:21 PM</td><td>5/20/2018 8:48:16 PM</td><td>13.65 GB</td></tr>
