--- a/CyrusDashboard/History_VM-Print1.html
+++ b/CyrusDashboard/History_VM-Print1.html
@@ -22,6 +22,8 @@
 <table>
 <colgroup><col/><col/><col/><col/></colgroup>
 <tr><th>Name</th><th>CreationTime</th><th>LastModified</th><th>Size</th></tr>
+<tr><td>V:\VM_Backup\Print1\Print1D2018-07-22T211344.vbk</td><td>7/22/2018 9:14:08 PM</td><td>7/22/2018 9:23:37 PM</td><td>11.04 GB</td></tr>
+<tr><td>V:\VM_Backup\Print1\Print1D2018-07-01T211347.vbk</td><td>7/1/2018 9:14:10 PM</td><td>7/1/2018 9:23:42 PM</td><td>10.95 GB</td></tr>
 <tr><td>V:\VM_Backup\Print1\Print1D2018-06-24T211451.vbk</td><td>6/24/2018 9:15:14 PM</td><td>6/24/2018 9:25:00 PM</td><td>11.08 GB</td></tr>
 <tr><td>V:\VM_Backup\Print1\Print1D2018-06-10T210302.vbk</td><td>6/10/2018 9:03:24 PM</td><td>6/10/2018 9:13:12 PM</td><td>10.97 GB</td></tr>
 <tr><td>V:\VM_Backup\Print1\Print1D2018-05-20T210008.vbk</td><td>5/20/2018 9:00:31 PM</td><td>5/20/2018 9:09:32 PM</td><td>9.99 GB</td></tr>
