--- a/CyrusDashboard/History_VM-Spiceworks1.html
+++ b/CyrusDashboard/History_VM-Spiceworks1.html
@@ -22,6 +22,8 @@
 <table>
 <colgroup><col/><col/><col/><col/></colgroup>
 <tr><th>Name</th><th>CreationTime</th><th>LastModified</th><th>Size</th></tr>
+<tr><td>V:\VM_Backup\spiceworks1\spiceworks1D2018-07-22T212459.vbk</td><td>7/22/2018 9:25:22 PM</td><td>7/22/2018 9:38:10 PM</td><td>15.56 GB</td></tr>
+<tr><td>V:\VM_Backup\spiceworks1\spiceworks1D2018-07-01T212501.vbk</td><td>7/1/2018 9:25:24 PM</td><td>7/1/2018 9:37:38 PM</td><td>14.45 GB</td></tr>
 <tr><td>V:\VM_Backup\spiceworks1\spiceworks1D2018-06-24T212620.vbk</td><td>6/24/2018 9:26:43 PM</td><td>6/24/2018 9:38:45 PM</td><td>14.3 GB</td></tr>
 <tr><td>V:\VM_Backup\spiceworks1\spiceworks1D2018-06-10T211438.vbk</td><td>6/10/2018 9:15:00 PM</td><td>6/10/2018 9:26:58 PM</td><td>13.8 GB</td></tr>
 <tr><td>V:\VM_Backup\spiceworks1\spiceworks1D2018-05-20T211055.vbk</td><td>5/20/2018 9:11:18 PM</td><td>5/20/2018 9:29:24 PM</td><td>23.88 GB</td></tr>
