--- a/CyrusDashboard/History_VM-Sync1.html
+++ b/CyrusDashboard/History_VM-Sync1.html
@@ -22,6 +22,8 @@
 <table>
 <colgroup><col/><col/><col/><col/></colgroup>
 <tr><th>Name</th><th>CreationTime</th><th>LastModified</th><th>Size</th></tr>
+<tr><td>V:\VM_Backup\Sync1\Sync1D2018-07-22T213936.vbk</td><td>7/22/2018 9:39:59 PM</td><td>7/22/2018 9:47:23 PM</td><td>8.46 GB</td></tr>
+<tr><td>V:\VM_Backup\Sync1\Sync1D2018-07-01T213908.vbk</td><td>7/1/2018 9:39:31 PM</td><td>7/1/2018 9:46:56 PM</td><td>8.45 GB</td></tr>
 <tr><td>V:\VM_Backup\Sync1\Sync1D2018-06-24T214009.vbk</td><td>6/24/2018 9:40:32 PM</td><td>6/24/2018 9:48:03 PM</td><td>8.45 GB</td></tr>
 <tr><td>V:\VM_Backup\Sync1\Sync1D2018-06-10T212827.vbk</td><td>6/10/2018 9:28:49 PM</td><td>6/10/2018 9:36:26 PM</td><td>8.44 GB</td></tr>
 <tr><td>V:\VM_Backup\Sync1\Sync1D2018-05-20T213049.vbk</td><td>5/20/2018 9:31:12 PM</td><td>5/20/2018 9:38:46 PM</td><td>8.44 GB</td></tr>
