--- a/CyrusDashboard/History_VM-WSUS.html
+++ b/CyrusDashboard/History_VM-WSUS.html
@@ -22,6 +22,8 @@
 <table>
 <colgroup><col/><col/><col/><col/></colgroup>
 <tr><th>Name</th><th>CreationTime</th><th>LastModified</th><th>Size</th></tr>
+<tr><td>V:\VM_Backup\WSUS\WSUSD2018-07-22T214842.vbk</td><td>7/22/2018 9:49:05 PM</td><td>7/22/2018 10:43:21 PM</td><td>82.65 GB</td></tr>
+<tr><td>V:\VM_Backup\WSUS\WSUSD2018-07-01T214825.vbk</td><td>7/1/2018 9:48:48 PM</td><td>7/1/2018 10:18:14 PM</td><td>42.89 GB</td></tr>
 <tr><td>V:\VM_Backup\WSUS\WSUSD2018-06-24T214917.vbk</td><td>6/24/2018 9:49:40 PM</td><td>6/24/2018 10:19:22 PM</td><td>43.07 GB</td></tr>
 </table>
 </div>
