--- a/CyrusDashboard/History_VM-FruitServer1.html
+++ b/CyrusDashboard/History_VM-FruitServer1.html
@@ -22,6 +22,8 @@
 <table>
 <colgroup><col/><col/><col/><col/></colgroup>
 <tr><th>Name</th><th>CreationTime</th><th>LastModified</th><th>Size</th></tr>
+<tr><td>V:\VM_Backup\FruitServer1\FruitServer1D2018-07-22T210324.vbk</td><td>7/22/2018 9:03:47 PM</td><td>7/22/2018 9:07:47 PM</td><td>3.31 GB</td></tr>
+<tr><td>V:\VM_Backup\FruitServer1\FruitServer1D2018-07-01T210317.vbk</td><td>7/1/2018 9:03:40 PM</td><td>7/1/2018 9:07:37 PM</td><td>3.23 GB</td></tr>
 <tr><td>V:\VM_Backup\FruitServer1\FruitServer1D2018-06-24T210427.vbk</td><td>6/24/2018 9:04:50 PM</td><td>6/24/2018 9:08:48 PM</td><td>3.23 GB</td></tr>
 <tr><td>V:\VM_Backup\FruitServer1\FruitServer1D2018-06-10T205205.vbk</td><td>6/10/2018 8:52:28 PM</td><td>6/10/2018 8:56:31 PM</td><td>3.21 GB</td></tr>
 <tr><td>V:\VM_Backup\FruitServer1\FruitServer1D2018-05-20T204938.vbk</td><td>5/20/2018 8:50:01 PM</td><td>5/20/2018 8:54:00 PM</td><td>3.19 GB</td></tr>
