--- a/CyrusDashboard/History_VM-Pandora1.html
+++ b/CyrusDashboard/History_VM-Pandora1.html
@@ -20,6 +20,20 @@
   <div class="table-container">
 
 <table>
+<colgroup><col/><col/><col/><col/></colgroup>
+<tr><th>Name</th><th>CreationTime</th><th>LastModified</th><th>Size</th></tr>
+<tr><td>V:\VM_Backup\Pandora\PandoraD2018-07-22T210859.vbk</td><td>7/22/2018 9:09:22 PM</td><td>7/22/2018 9:12:38 PM</td><td>2.06 GB</td></tr>
+<tr><td>V:\VM_Backup\Pandora\PandoraD2018-07-01T210851.vbk</td><td>7/1/2018 9:09:14 PM</td><td>7/1/2018 9:12:37 PM</td><td>2.05 GB</td></tr>
+<tr><td>V:\VM_Backup\Pandora\PandoraD2018-06-24T211001.vbk</td><td>6/24/2018 9:10:24 PM</td><td>6/24/2018 9:13:43 PM</td><td>2.05 GB</td></tr>
+<tr><td>V:\VM_Backup\Pandora\PandoraD2018-06-10T205755.vbk</td><td>6/10/2018 8:58:19 PM</td><td>6/10/2018 9:01:48 PM</td><td>2.04 GB</td></tr>
+<tr><td>V:\VM_Backup\Pandora\PandoraD2018-05-20T205509.vbk</td><td>5/20/2018 8:55:32 PM</td><td>5/20/2018 8:58:55 PM</td><td>2.04 GB</td></tr>
+<tr><td>V:\VM_Backup\Pandora\PandoraD2018-05-13T205320.vbk</td><td>5/13/2018 8:53:43 PM</td><td>5/13/2018 8:56:59 PM</td><td>2.04 GB</td></tr>
+<tr><td>V:\VM_Backup\Pandora\PandoraD2018-04-29T204954.vbk</td><td>4/29/2018 8:50:17 PM</td><td>4/29/2018 8:53:41 PM</td><td>2.03 GB</td></tr>
+<tr><td>V:\VM_Backup\Pandora\PandoraD2018-04-15T205819.vbk</td><td>4/15/2018 8:58:48 PM</td><td>4/15/2018 9:03:07 PM</td><td>2.03 GB</td></tr>
+<tr><td>V:\VM_Backup\Pandora\PandoraD2018-04-01T210028.vbk</td><td>4/1/2018 9:00:56 PM</td><td>4/1/2018 9:05:19 PM</td><td>2.02 GB</td></tr>
+<tr><td>V:\VM_Backup\Pandora\PandoraD2018-03-11T210125.vbk</td><td>3/11/2018 9:01:53 PM</td><td>3/11/2018 9:06:16 PM</td><td>2 GB</td></tr>
+<tr><td>V:\VM_Backup\Pandora\PandoraD2018-03-04T210115.vbk</td><td>3/4/2018 9:01:43 PM</td><td>3/4/2018 9:05:46 PM</td><td>2 GB</td></tr>
+<tr><td>V:\VM_Backup\Pandora\PandoraD2018-02-11T205845.vbk</td><td>2/11/2018 8:59:13 PM</td><td>2/11/2018 9:03:23 PM</td><td>2 GB</td></tr>
 </table>
 </div>
 </div>
