--- a/CyrusDashboard/Index.html
+++ b/CyrusDashboard/Index.html
@@ -4,7 +4,7 @@
         <!--JS from https://stackoverflow.com/a/42333464 -->
         <script src="./Scripts/jquery-1.10.2.js"></script>
 </head>
-<body>
+<body id="index-page">
     <!--Nav bar (code modified from https://stackoverflow.com/a/42333464)-->
     <div id="nav-placeholder"></div>
     <script>$(function(){$("#nav-placeholder").load("./page_elements/nav-bar.html");});</script>
@@ -12,16 +12,32 @@
     
     <div class="page-header">
         <h1>Welcome to the Dashboard for the Cyrus Backup Solution!</h1>
-        <p>To Do: Switches, GPOs, and AD3 backup histories.</p>
+        <p>Last updated: 07/24/2018 11:44:58</p>
     </div>
     
     <div class="page-content">
         <div class="sub-content">
             <div class="sub-content-head">
-                <h3>Backup History Pages</h3>
+                <h3>VM Backup History</h3>
             </div>
             <div class="history-link-container">
-                <a class='history-link' href='History_Centaur.html' title='Centaur'>Centaur</a><br/><a class='history-link' href='History_Centurion.html' title='Centurion'>Centurion</a><br/><a class='history-link' href='History_Dokuwiki.html' title='Dokuwiki'>Dokuwiki</a><br/><a class='history-link' href='History_EMS.html' title='EMS'>EMS</a><br/><a class='history-link' href='History_EveryonePrint.html' title='EveryonePrint'>EveryonePrint</a><br/><a class='history-link' href='History_Fortigate Config.html' title='Fortigate Config'>Fortigate Config</a><br/><a class='history-link' href='History_Fruit Server.html' title='Fruit Server'>Fruit Server</a><br/><a class='history-link' href='History_FSSO Config.html' title='FSSO Config'>FSSO Config</a><br/><a class='history-link' href='History_HiveManager.html' title='HiveManager'>HiveManager</a><br/><a class='history-link' href='History_NASShare.html' title='NASShare'>NASShare</a><br/><a class='history-link' href='History_Spiceworks.html' title='Spiceworks'>Spiceworks</a><br/><a class='history-link' href='History_UMRA.html' title='UMRA'>UMRA</a><br/><a class='history-link' href='History_VM-AD3.html' title='VM-AD3'>VM-AD3</a><br/><a class='history-link' href='History_VM-Centurion1.html' title='VM-Centurion1'>VM-Centurion1</a><br/><a class='history-link' href='History_VM-CyrusClient1.html' title='VM-CyrusClient1'>VM-CyrusClient1</a><br/><a class='history-link' href='History_VM-Dokuwiki1.html' title='VM-Dokuwiki1'>VM-Dokuwiki1</a><br/><a class='history-link' href='History_VM-EP-MG1.html' title='VM-EP-MG1'>VM-EP-MG1</a><br/><a class='history-link' href='History_VM-FortiClientEMS1.html' title='VM-FortiClientEMS1'>VM-FortiClientEMS1</a><br/><a class='history-link' href='History_VM-FruitServer1.html' title='VM-FruitServer1'>VM-FruitServer1</a><br/><a class='history-link' href='History_VM-Pandora1.html' title='VM-Pandora1'>VM-Pandora1</a><br/><a class='history-link' href='History_VM-Print1.html' title='VM-Print1'>VM-Print1</a><br/><a class='history-link' href='History_VM-sccm16-01.html' title='VM-sccm16-01'>VM-sccm16-01</a><br/><a class='history-link' href='History_VM-Spiceworks1.html' title='VM-Spiceworks1'>VM-Spiceworks1</a><br/><a class='history-link' href='History_VM-Sync1.html' title='VM-Sync1'>VM-Sync1</a><br/><a class='history-link' href='History_VM-WSUS.html' title='VM-WSUS'>VM-WSUS</a><br/><a class='history-link' href='History_Xibo.html' title='Xibo'>Xibo</a><br/>
+                <a class='history-link' href='History_VM-AD3.html' title='AD3'>AD3</a><br/><a class='history-link' href='History_VM-Centurion1.html' title='Centurion1'>Centurion1</a><br/><a class='history-link' href='History_VM-CyrusClient1.html' title='CyrusClient1'>CyrusClient1</a><br/><a class='history-link' href='History_VM-Dokuwiki1.html' title='Dokuwiki1'>Dokuwiki1</a><br/><a class='history-link' href='History_VM-EP-MG1.html' title='EP'>EP</a><br/><a class='history-link' href='History_VM-FortiClientEMS1.html' title='FortiClientEMS1'>FortiClientEMS1</a><br/><a class='history-link' href='History_VM-FruitServer1.html' title='FruitServer1'>FruitServer1</a><br/><a class='history-link' href='History_VM-Pandora1.html' title='Pandora1'>Pandora1</a><br/><a class='history-link' href='History_VM-Print1.html' title='Print1'>Print1</a><br/><a class='history-link' href='History_VM-sccm16-01.html' title='sccm16'>sccm16</a><br/><a class='history-link' href='History_VM-Spiceworks1.html' title='Spiceworks1'>Spiceworks1</a><br/><a class='history-link' href='History_VM-Sync1.html' title='Sync1'>Sync1</a><br/><a class='history-link' href='History_VM-WSUS.html' title='WSUS'>WSUS</a><br/>
+            </div>
+        </div>
+        <div class="sub-content">
+            <div class="sub-content-head">
+                <h3>Network Infrastructure Backup History</h3>
+            </div>
+            <div class="history-link-container">
+                <a class='history-link' href='History_Network-Band Switch.html' title='Band Switch'>Band Switch</a><br/><a class='history-link' href='History_Network-Business Office Switch.html' title='Business Office Switch'>Business Office Switch</a><br/><a class='history-link' href='History_Network-Core Switch.html' title='Core Switch'>Core Switch</a><br/><a class='history-link' href='History_Network-Fortigate Config.html' title='Fortigate Config'>Fortigate Config</a><br/><a class='history-link' href='History_Network-Gym Switch.html' title='Gym Switch'>Gym Switch</a><br/><a class='history-link' href='History_Network-Help Desk Switch.html' title='Help Desk Switch'>Help Desk Switch</a><br/><a class='history-link' href='History_Network-NASShare.html' title='NASShare'>NASShare</a><br/>
+            </div>
+        </div>
+        <div class="sub-content">
+            <div class="sub-content-head">
+                <h3>App Backup History</h3>
+            </div>
+            <div class="history-link-container">
+                <a class='history-link' href='History_Centaur.html' title='Centaur'>Centaur</a><br/><a class='history-link' href='History_Centurion.html' title='Centurion'>Centurion</a><br/><a class='history-link' href='History_Dokuwiki.html' title='Dokuwiki'>Dokuwiki</a><br/><a class='history-link' href='History_EMS.html' title='EMS'>EMS</a><br/><a class='history-link' href='History_EveryonePrint.html' title='EveryonePrint'>EveryonePrint</a><br/><a class='history-link' href='History_Fortigate Config.html' title='Fortigate Config'>Fortigate Config</a><br/><a class='history-link' href='History_Fruit Server.html' title='Fruit Server'>Fruit Server</a><br/><a class='history-link' href='History_FSSO Config.html' title='FSSO Config'>FSSO Config</a><br/><a class='history-link' href='History_GPO.html' title='GPO'>GPO</a><br/><a class='history-link' href='History_HiveManager.html' title='HiveManager'>HiveManager</a><br/><a class='history-link' href='History_NASShare.html' title='NASShare'>NASShare</a><br/><a class='history-link' href='History_Spiceworks.html' title='Spiceworks'>Spiceworks</a><br/><a class='history-link' href='History_UMRA.html' title='UMRA'>UMRA</a><br/><a class='history-link' href='History_Xibo.html' title='Xibo'>Xibo</a><br/>
             </div>
         </div>
     </div>
